--- a/src/app/components/styles.css
+++ b/src/app/components/styles.css
@@ -31,6 +31,16 @@
     body {
         height: 100vh;
         background: var(--body-color);
+        transition: var(--tran-04);
+    }
+
+    body.dark {
+        --body-color: #18191A;
+        --sidebar-color: #242526;
+        --primary-color: #3A3B3C;
+        --primary-color-light: #3A3B3C;
+        --toggle-color: #FFF;
+        --text-color: #CCC;
     }
 
 
@@ -153,3 +163,62 @@
         transition: var(--tran-03);
     }
 
+    .sidebar .menu-bar {
+        height: calc(100% - 50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .menu-bar .mode {
+        background: var(--primary-color-light);
+    }
+
+    .menu-bar .mode .moon-sun {
+        height: 50px;
+        width: 60px;
+        display: flex;
+        align-items: center;
+    }
+
+    .menu-bar .mode i {
+        position: absolute;
+    }
+
+    .menu-bar .mode i.sun {
+        opacity: 0;
+    }
+
+    .menu-bar .mode .toggle-switch {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        min-width: 60px;
+        cursor: pointer;
+    }
+
+    .toggle-switch .switch {
+        position: relative;
+        height: 22px;
+        width: 44px;
+        border-radius: 25px;
+        background: var(--toggle-color);
+    }
+    .switch::before {
+        content: '';
+        position: absolute;
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        background: var(--sidebar-color);
+        transition: var(--tran-03);
+        cursor: pointer;
+    }
+
+    body.dark .switch::before {
+        left: 24px;
+    }
